--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,17 @@
 {
     "compilerOptions": {
         "target": "ES6",
-        "module": "commonjs",
+        "module": "CommonJS",
         "noImplicitAny": true,
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
         "outDir": "./dist"
     },
-    "files": [],
     "references": [
         {
-            "path": "./observer_pattern"
+            "path": "./observer_pattern",
+            "path": "./strategy_pattern"
         }
-    ]
+    ],
 }
