--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf dist",
+    "build": "npm run clean && npx tsc --build",
     "observer": "npm run clean && npx tsc --build && node dist/observer_pattern/main.js",
     "strategy": "npm run clean && npx tsc --build && node dist/strategy_pattern/main.js"
   },
