--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && npx tsc --build",
     "observer": "npm run clean && npx tsc --build && node dist/observer_pattern/main.js",
-    "strategy": "npm run clean && npx tsc --build && node dist/strategy_pattern/main.js"
+    "strategy": "npm run clean && npx tsc --build && node dist/strategy_pattern/main.js",
+    "state": "npm run clean && npx tsc --build && node dist/state_pattern/main.js"
   },
   "repository": {
     "type": "git",
