--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "state": "npm run clean && npx tsc --build && node dist/state_pattern/main.js",
     "chain": "npm run clean && npx tsc --build && node dist/chain_of_responsibility_pattern/main.js",
     "command": "npm run clean && npx tsc --build && node dist/command_pattern/main.js",
-    "template": "npm run clean && npx tsc --build && node dist/template_pattern/main.js"
+    "template": "npm run clean && npx tsc --build && node dist/template_pattern/main.js",
+    "memento": "npm run clean && npx tsc --build && node dist/memento_pattern/main.js"
   },
   "repository": {
     "type": "git",
