Adding chain of resp pattern for logger

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "command": "npm run clean && npx tsc --build && node dist/command_pattern/main.js",
     "template": "npm run clean && npx tsc --build && node dist/template_pattern/main.js",
     "memento": "npm run clean && npx tsc --build && node dist/memento_pattern/main.js",
-    "snl": "npm run clean && npx tsc --build && node dist/examples/snake_and_ladder/main.js"
+    "snl": "npm run clean && npx tsc --build && node dist/examples/snake_and_ladder/main.js",
+    "logger": "npm run clean && npx tsc --build && node dist/examples/logger/main.js"
   },
   "repository": {
     "type": "git",
