Adding composite design pattern

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "memento": "npm run clean && npx tsc --build && node dist/memento_pattern/main.js",
     "snl": "npm run clean && npx tsc --build && node dist/examples/snake_and_ladder/main.js",
     "logger": "npm run clean && npx tsc --build && node dist/examples/logger/main.js",
-    "decorator": "npm run clean && npx tsc --build && node dist/decorator_pattern/main.js"
+    "decorator": "npm run clean && npx tsc --build && node dist/decorator_pattern/main.js",
+    "composite_task": "npm run clean && npx tsc --build && node dist/composite_pattern/tasks/main.js",
+    "composite_arith": "npm run clean && npx tsc --build && node dist/composite_pattern/arithmetic_expression/main.js"
   },
   "repository": {
     "type": "git",
